Updated Image overflow issue

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h4 {
 }
 
 .header__img {
-  width: 100%;
+  width: 80%;
   grid-column: 2 / 3;
   grid-row: 1 / span 4;
   transform: translateY(-6rem);
